# meander

./: .detoxrc.js  .env.example  .gitignore  App.tsx  README.md  app.config.ts  babel.config.js  jest.config.ts  jest.setup.ts  metro.config.js  package-lock.json  package.json  tsconfig.json
.sisyphus/plans/: meander-mvp-plan.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: config.py  main.py
backend/tests/: conftest.py  test_structure.py
docs/: architecture-overview.md  decisions.md  project-context-template.md
e2e/: planner.smoke.e2e.ts
openspec/changes/archive/2026-02-21-backend-project-structure/: design.md  proposal.md  tasks.md
src/__tests__/: App.test.tsx
src/app/providers/: AppProviders.tsx
src/components/: ErrorNotice.tsx  StateView.tsx  index.ts
src/features/geocoding/: index.ts  types.ts
src/features/geocoding/__tests__/: mapboxGeocodingService.test.ts
src/features/geocoding/services/: mapboxGeocodingService.ts
src/features/itinerary/__tests__/: openaiItineraryService.test.ts  schema.test.ts
src/features/itinerary/components/: ItineraryList.tsx  StopCard.tsx  index.ts
src/features/itinerary/domain/: fixtures.ts  schema.ts  types.ts
src/features/itinerary/services/: index.ts  normalizer.ts  (+2 more)
src/features/planner/: index.ts  types.ts
src/features/routing/: types.ts
src/features/storage/: sessionCache.ts
src/lib/: constants.ts  env.ts  errors.ts  index.ts
src/navigation/: RootNavigator.tsx  types.ts
src/screens/: HomeScreen.tsx  ItineraryScreen.tsx
src/test-utils/: render.tsx
src/theme/: theme.ts
(+15 files in other folders)
